fixed overflow cut off

--- a/src/components/accomodation/Accomodation.css
+++ b/src/components/accomodation/Accomodation.css
@@ -50,7 +50,7 @@
 .Accomodation__section {
   width: 300px;
   margin: 20px 20px;
-  overflow: hidden;
+  overflow: visible;
 
 }
 
